--- a/README
+++ b/README
@@ -9,5 +9,5 @@ $ sudo pacman -S npm
 Install browserify globally:
 $ sudo npm install -g browserify
 
-Next, install browserify, babel, react, react-bootstrap, react-widgets, and globalize in our directory using npm:
-$ cd static && npm install browserify react react-dom react-addons-update react-bootstrap react-widgets babelify babel-preset-react globalize cldr-data
+Next, install browserify, babel, react, react-bootstrap, react-widgets, globalize, and big.js in our directory using npm:
+$ npm install browserify react react-dom react-addons-update react-bootstrap react-widgets babelify babel-preset-react globalize cldr-data big.js
